Bug 167786 - ID3 v2.2 album art not being disbplayed in applications
Summary: ID3 v2.2 album art not being disbplayed in applications
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-30 22:33 UTC by Erik Johnson
Modified: 2009-07-11 16:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch that converts v2.2 PIC frames to v2.4 APIC frames (4.25 KB, patch)
2008-11-21 15:39 UTC, Marc Halbruegge
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Johnson 2008-07-30 22:33:56 UTC
Version:           1.5 (using KDE 3.5.9)
Installed from:    Ubuntu Packages
Compiler:          gcc 4.2.3 
OS:                Linux

This seems to be related to Bug 152209, in which album art from ID3 v2.4 tags was not being displayed in Amarok.  All of my MP3s that contain ID3 v2.2 tags won't show album art in Amarok.  After opening these files in a tag editor and re-saving them as ID3 v2.3 and re-scanning my collection in Amarok, the artwork shows up just fine.
Comment 1 Erik Johnson 2008-07-30 22:36:27 UTC
I would like to clarify the information above in the bug description.  KDE 3.5.9 was installed using Ubuntu packages, however I have compiled and installed version 1.5 of taglib from source as Ubuntu's Hardy repos still have 1.4.
Comment 2 Marc Halbruegge 2008-11-20 21:28:28 UTC
The problem seems to be as follows: 
- in id3 v2.2 the picture type is an array of 3 characters (without terminating zero)
- in later versions, the picture type is stored as zero terminated mime type

taglib tries to interpret the v2.2 picture type as zero terminated, which causes various errors in the aftermath.

I'll try to provide a patch in the next days
Comment 3 Marc Halbruegge 2008-11-21 15:39:28 UTC
Created attachment 28729 [details]
patch that converts v2.2 PIC frames to v2.4 APIC frames
Comment 4 Marc Halbruegge 2008-11-21 15:42:24 UTC
forgot to mention: the patch goes into directory taglib/mpeg/id3v2
Comment 5 Marc Halbruegge 2008-12-15 19:58:36 UTC
please use the cumulative patch added to Bug 171957 (taglib corrupts ogg files) instead
Comment 6 Lukáš Lalinský 2009-07-11 16:27:18 UTC
SVN commit 994836 by lalinsky:

Support for ID3v2.2 PIC frames

Patch by Marc Halbruegge
BUG:167786


 M  +49 -1     taglib/mpeg/id3v2/frames/attachedpictureframe.cpp  
 M  +13 -3     taglib/mpeg/id3v2/frames/attachedpictureframe.h  
 M  +9 -2      taglib/mpeg/id3v2/id3v2framefactory.cpp  
 M  +20 -0     tests/test_id3v2.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=994836